--- a/project_bateau.uvprojx
+++ b/project_bateau.uvprojx
@@ -403,6 +403,11 @@
               <FileType>5</FileType>
               <FilePath>.\Include\uart.h</FilePath>
             </File>
+            <File>
+              <FileName>adc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Include\adc.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -427,6 +432,11 @@
               <FileName>uart.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\Source\uart.c</FilePath>
+            </File>
+            <File>
+              <FileName>adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -835,6 +845,11 @@
               <FileType>5</FileType>
               <FilePath>.\Include\uart.h</FilePath>
             </File>
+            <File>
+              <FileName>adc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Include\adc.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -859,6 +874,11 @@
               <FileName>uart.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\Source\uart.c</FilePath>
+            </File>
+            <File>
+              <FileName>adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\adc.c</FilePath>
             </File>
           </Files>
         </Group>
